--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\USER\AppData\Local\Temp\testng-eclipse-814072956\testng-customsuite.xml</span>
+                    <span>C:\Users\USER\AppData\Local\Temp\testng-eclipse-1888451206\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,6 +103,11 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="Tools.TestScripts" class="method navigator-link" hash-for-method="AddHandTools">AddHandTools</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="Tools.TestScripts" class="method navigator-link" hash-for-method="AddRecord">AddRecord</a> <!-- method navigator-link -->
                       </span>
                       <br/>
@@ -113,17 +118,12 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Tools.TestScripts" class="method navigator-link" hash-for-method="LoginTest">LoginTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="Tools.TestScripts" class="method navigator-link" hash-for-method="LoginTestAfterChangePassword">LoginTestAfterChangePassword</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="Tools.TestScripts" class="method navigator-link" hash-for-method="ReadData">ReadData</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Tools.TestScripts" class="method navigator-link" hash-for-method="SignUpTest">SignUpTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -151,6 +151,13 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
+                  <a name="AddHandTools">
+                  </a> <!-- AddHandTools -->
+                  <span class="method-name">AddHandTools</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="AddRecord">
                   </a> <!-- AddRecord -->
                   <span class="method-name">AddRecord</span>
@@ -165,9 +172,9 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="LoginTest">
-                  </a> <!-- LoginTest -->
-                  <span class="method-name">LoginTest</span>
+                  <a name="LoginTestAfterChangePassword">
+                  </a> <!-- LoginTestAfterChangePassword -->
+                  <span class="method-name">LoginTestAfterChangePassword</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -175,13 +182,6 @@
                   <a name="ReadData">
                   </a> <!-- ReadData -->
                   <span class="method-name">ReadData</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="SignUpTest">
-                  </a> <!-- SignUpTest -->
-                  <span class="method-name">SignUpTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -196,7 +196,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\USER\AppData\Local\Temp\testng-eclipse-814072956\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\USER\AppData\Local\Temp\testng-eclipse-1888451206\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -247,34 +247,34 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(6);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'SignUpTest')
+data.setCell(0, 1, 'AddHandTools')
 data.setCell(0, 2, 'Tools.TestScripts')
-data.setCell(0, 3, 5014);
+data.setCell(0, 3, 30953);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'LoginTest')
+data.setCell(1, 1, 'LoginTestAfterChangePassword')
 data.setCell(1, 2, 'Tools.TestScripts')
-data.setCell(1, 3, 4648);
+data.setCell(1, 3, 5952);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'ReadData')
 data.setCell(2, 2, 'Tools.TestScripts')
-data.setCell(2, 3, 37);
+data.setCell(2, 3, 101);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'AddRecord')
 data.setCell(3, 2, 'Tools.TestScripts')
-data.setCell(3, 3, 18);
+data.setCell(3, 3, 33);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'DeleteRecord')
+data.setCell(4, 1, 'UpdateRecord')
 data.setCell(4, 2, 'Tools.TestScripts')
-data.setCell(4, 3, 6);
+data.setCell(4, 3, 13);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'UpdateRecord')
+data.setCell(5, 1, 'DeleteRecord')
 data.setCell(5, 2, 'Tools.TestScripts')
-data.setCell(5, 3, 4);
+data.setCell(5, 3, 9);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 9 seconds</span>
+              <span class="suite-total-time">Total running time: 37 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -289,9 +289,18 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">2 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">Tools.TestScripts</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">SignUpTest</span>
+                <br/>
+                <span class="ignored-method-name">setNewPassword</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -307,27 +316,27 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">AddRecord</span>
-                <span class="method-start">2678 ms</span>
+                <span class="method-start">2412 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">UpdateRecord</span>
-                <span class="method-start">2699 ms</span>
+                <span class="method-start">2450 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ReadData</span>
-                <span class="method-start">2708 ms</span>
+                <span class="method-start">2466 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">DeleteRecord</span>
-                <span class="method-start">2747 ms</span>
+                <span class="method-start">2575 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">SignUpTest</span>
-                <span class="method-start">2754 ms</span>
+                <span class="method-name">LoginTestAfterChangePassword</span>
+                <span class="method-start">2595 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">LoginTest</span>
-                <span class="method-start">7769 ms</span>
+                <span class="method-name">AddHandTools</span>
+                <span class="method-start">8555 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
