add catogery tools test

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\USER\AppData\Local\Temp\testng-eclipse-1888451206\testng-customsuite.xml</span>
+                    <span>C:\Users\USER\AppData\Local\Temp\testng-eclipse--943423865\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">6 methods,   6 passed</span>
+                    <span class="method-stats">7 methods,   7 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,12 +103,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Tools.TestScripts" class="method navigator-link" hash-for-method="AddHandTools">AddHandTools</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="Tools.TestScripts" class="method navigator-link" hash-for-method="AddRecord">AddRecord</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Tools.TestScripts" class="method navigator-link" hash-for-method="AddRecord">AddRecord</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="Tools.TestScripts" class="method navigator-link" hash-for-method="AddTools">AddTools</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -118,7 +118,7 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Tools.TestScripts" class="method navigator-link" hash-for-method="LoginTestAfterChangePassword">LoginTestAfterChangePassword</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="Tools.TestScripts" class="method navigator-link" hash-for-method="LoginTest">LoginTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -129,6 +129,11 @@
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="Tools.TestScripts" class="method navigator-link" hash-for-method="UpdateRecord">UpdateRecord</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="Tools.TestScripts" class="method navigator-link" hash-for-method="checkoutTest">checkoutTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -151,16 +156,16 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="AddHandTools">
-                  </a> <!-- AddHandTools -->
-                  <span class="method-name">AddHandTools</span>
+                  <a name="AddRecord">
+                  </a> <!-- AddRecord -->
+                  <span class="method-name">AddRecord</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="AddRecord">
-                  </a> <!-- AddRecord -->
-                  <span class="method-name">AddRecord</span>
+                  <a name="AddTools">
+                  </a> <!-- AddTools -->
+                  <span class="method-name">AddTools</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -172,9 +177,9 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="LoginTestAfterChangePassword">
-                  </a> <!-- LoginTestAfterChangePassword -->
-                  <span class="method-name">LoginTestAfterChangePassword</span>
+                  <a name="LoginTest">
+                  </a> <!-- LoginTest -->
+                  <span class="method-name">LoginTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -191,12 +196,19 @@
                   <span class="method-name">UpdateRecord</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="checkoutTest">
+                  </a> <!-- checkoutTest -->
+                  <span class="method-name">checkoutTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\USER\AppData\Local\Temp\testng-eclipse-1888451206\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\USER\AppData\Local\Temp\testng-eclipse--943423865\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -245,36 +257,40 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(6);
+data.addRows(7);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'AddHandTools')
+data.setCell(0, 1, 'AddTools')
 data.setCell(0, 2, 'Tools.TestScripts')
-data.setCell(0, 3, 30953);
+data.setCell(0, 3, 153636);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'LoginTestAfterChangePassword')
+data.setCell(1, 1, 'checkoutTest')
 data.setCell(1, 2, 'Tools.TestScripts')
-data.setCell(1, 3, 5952);
+data.setCell(1, 3, 5713);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'ReadData')
+data.setCell(2, 1, 'LoginTest')
 data.setCell(2, 2, 'Tools.TestScripts')
-data.setCell(2, 3, 101);
+data.setCell(2, 3, 4014);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'AddRecord')
+data.setCell(3, 1, 'ReadData')
 data.setCell(3, 2, 'Tools.TestScripts')
-data.setCell(3, 3, 33);
+data.setCell(3, 3, 234);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'UpdateRecord')
+data.setCell(4, 1, 'AddRecord')
 data.setCell(4, 2, 'Tools.TestScripts')
-data.setCell(4, 3, 13);
+data.setCell(4, 3, 108);
 data.setCell(5, 0, 5)
 data.setCell(5, 1, 'DeleteRecord')
 data.setCell(5, 2, 'Tools.TestScripts')
-data.setCell(5, 3, 9);
+data.setCell(5, 3, 30);
+data.setCell(6, 0, 6)
+data.setCell(6, 1, 'UpdateRecord')
+data.setCell(6, 2, 'Tools.TestScripts')
+data.setCell(6, 3, 21);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 37 seconds</span>
+              <span class="suite-total-time">Total running time: 2 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -289,12 +305,14 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">2 ignored methods</span>
+            <span class="header-content">3 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
               <span class="ignored-class-name">Tools.TestScripts</span>
               <div class="ignored-methods-div">
+                <span class="ignored-method-name">LoginTestAfterChangePassword</span>
+                <br/>
                 <span class="ignored-method-name">SignUpTest</span>
                 <br/>
                 <span class="ignored-method-name">setNewPassword</span>
@@ -316,27 +334,31 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">AddRecord</span>
-                <span class="method-start">2412 ms</span>
+                <span class="method-start">5096 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">UpdateRecord</span>
-                <span class="method-start">2450 ms</span>
+                <span class="method-start">5229 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ReadData</span>
-                <span class="method-start">2466 ms</span>
+                <span class="method-start">5265 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">DeleteRecord</span>
-                <span class="method-start">2575 ms</span>
+                <span class="method-start">5515 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">LoginTestAfterChangePassword</span>
-                <span class="method-start">2595 ms</span>
+                <span class="method-name">LoginTest</span>
+                <span class="method-start">5562 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">AddHandTools</span>
-                <span class="method-start">8555 ms</span>
+                <span class="method-name">AddTools</span>
+                <span class="method-start">9583 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">checkoutTest</span>
+                <span class="method-start">163236 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
